--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -32,3 +32,15 @@ p {
     justify-content: center;
     align-items: center;
 }
+
+@media screen and (min-width: 100px) and (max-width: 700px) {
+    .todo-app {
+        width: 100%;
+        height: 100%;
+        padding: 10px;
+    }
+
+    .m-t {
+        margin-top: 10px
+    }
+}
